--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "ownerNumber": ["6285795586847@s.whatsapp.net"],
-    "ownerName": ["LionSuzune"],
-    "botName": "Harley Md",
-    "apikey": "BELI ATUH DI LOLHUMAN",
+    "ownerNumber": ["6283113989278@s.whatsapp.net"],
+    "ownerName": ["KazuKi"],
+    "botName": "KazuKiMd",
+    "apikey": "lolhuman",
     "saweria": "fadlyid",
     "instagram": "itsmelyliachan",
     "sessionName": "Harley Md",
