--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
     "ownerName": ["KazuKi"],
     "botName": "KazuKiMd",
     "apikey": "lolhuman",
-    "saweria": "fadlyid",
-    "instagram": "itsmelyliachan",
+    "saweria": "Jiplonk",
+    "instagram": "Jiplonk33",
     "sessionName": "Harley Md",
     "pathimg": "./media/x-none.jpg",
     "gamewaktu": 90,
